Added download link to button.

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="download-card">
           <h3>Windows</h3>
           <p>ZIP file hosted on GitHub</p>
-          <a class="btn btn--primary" href="#" aria-label="Download Chiaru for Windows">Download .exe</a>
+          <a class="btn btn--primary" href="https://github.com/enoseven7/Chiaru/releases/tag/V1.0.0" aria-label="Download Chiaru for Windows">Download .exe</a>
         </div>
         <div class="download-card muted">
           <h3>macOS</h3>
