Added GitHub link to site

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="#about">About</a>
       <a href="#features">Features</a>
       <a href="#downloads">Download</a>
+      <a href="#github">GitHub</a>
       <a href="#faq">FAQ</a>
     </nav>
     <button class="mode-toggle" id="mode-toggle" aria-label="Toggle theme">
@@ -178,6 +179,18 @@
           <summary>Can I import from Anki?</summary>
           <p>Chiaru supports Anki flashcard imports, and they are constantly being refined as Chiaru updates.</p>
         </details>
+      </div>
+    </section>
+
+    <section id="github" class="section">
+      <div class="section__header">
+        <p class="pill">Open source</p>
+        <h2>Explore the Chiaru code on GitHub</h2>
+        <p class="lede">Read the source, file an issue, or star the project to get updates.</p>
+      </div>
+      <div class="hero__actions">
+        <a class="btn btn--primary" href="https://github.com/enoseven7/Chiaru" aria-label="View Chiaru on GitHub">View repository</a>
+        <a class="btn btn--ghost" href="https://github.com/enoseven7/Chiaru/releases/tag/V1.0.0" aria-label="Go to the latest Chiaru release">Latest release</a>
       </div>
     </section>
   </main>
